--- a/internal/assets/system/admin/index.html
+++ b/internal/assets/system/admin/index.html
@@ -133,7 +133,7 @@
             <div class="col-12 col-lg-auto mt-3 mt-lg-0">
               <ul class="list-inline list-inline-dots mb-0">
                 <li class="list-inline-item">
-                  fazt.sh v0.3.0
+                  fazt.sh <span id="app-version">dev</span>
                 </li>
               </ul>
             </div>
